[gd_scene load_steps=5 format=3 uid="uid://bslhrv3eo36wd"]

[ext_resource type="Script" path="res://scenes/lobby.gd" id="1_g2fmt"]
[ext_resource type="PackedScene" uid="uid://chbh4lxk8rmmd" path="res://scenes/ui/lobby_player.tscn" id="2_060bj"]
[ext_resource type="PackedScene" uid="uid://baej8w6k5eqoo" path="res://scenes/ui/background_animation.tscn" id="3_huxvo"]
[ext_resource type="Theme" uid="uid://d1pvjfd35s47x" path="res://themes/ui_theme.tres" id="4_5e0xn"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2fmt")
lobby_player_scene = ExtResource("2_060bj")

[node name="Backgroud" parent="." instance=ExtResource("3_huxvo")]
layout_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -96.5
offset_right = 150.0
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_5e0xn")

[node name="Menus" type="MarginContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StartMenu" type="VBoxContainer" parent="PanelContainer/Menus"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="Back" type="Button" parent="PanelContainer/Menus/StartMenu"]
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[node name="Label" type="Label" parent="PanelContainer/Menus/StartMenu"]
layout_mode = 2
text = "Name:
"

[node name="User" type="LineEdit" parent="PanelContainer/Menus/StartMenu"]
unique_name_in_owner = true
layout_mode = 2
text = "Player"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Menus/StartMenu"]
layout_mode = 2

[node name="Host" type="Button" parent="PanelContainer/Menus/StartMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="Join" type="Button" parent="PanelContainer/Menus/StartMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="JoinMenu" type="VBoxContainer" parent="PanelContainer/Menus"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/Menus/JoinMenu"]
layout_mode = 2
text = "IP:
"

[node name="IP" type="LineEdit" parent="PanelContainer/Menus/JoinMenu"]
unique_name_in_owner = true
layout_mode = 2
text = "127.0.0.1"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Menus/JoinMenu"]
layout_mode = 2

[node name="BackJoin" type="Button" parent="PanelContainer/Menus/JoinMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="ConfirmJoin" type="Button" parent="PanelContainer/Menus/JoinMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="Info" type="Label" parent="PanelContainer/Menus/JoinMenu"]
visible = false
layout_mode = 2

[node name="ReadyMenu" type="VBoxContainer" parent="PanelContainer/Menus"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2
text = "Players:
"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2

[node name="Players" type="VBoxContainer" parent="PanelContainer/Menus/ReadyMenu/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2

[node name="RoleA" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Fast Gun"

[node name="RoleB" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Shotgun"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2

[node name="BackReady" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back
"

[node name="Ready" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"

[node name="TimeContainer" type="HBoxContainer" parent="PanelContainer/Menus/ReadyMenu"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/Menus/ReadyMenu/TimeContainer"]
layout_mode = 2
text = "Starting in:"

[node name="Time" type="Label" parent="PanelContainer/Menus/ReadyMenu/TimeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="StartTimer" type="Timer" parent="."]

[connection signal="pressed" from="PanelContainer/Menus/StartMenu/Back" to="." method="_on_back_pressed"]
